name:                friendly-currency
version:             0.1.0.0
synopsis:            ISO 4217 Currencies
description:         Currency representation, pretty printing and conversion.
homepage:            https://github.com/alx741/friendly-currency#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde [alx741]
maintainer:          alx741@riseup.net
copyright:           2017 Daniel Campoverde [alx741]
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Currency.Currencies
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite friendly-currency-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , friendly-currency
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/friendly-currency
